# permedcoe

./: .gitignore  .gitmodules  README.md
building-blocks/core/: README.md  example.sh  setup.cfg
building-blocks/core/decoupler/: decoupler_bb.py
building-blocks/core/decoupler_bb/: setup.py
building-blocks/core/decoupler_bb/decoupler_bb/: main.py
building-blocks/core/decoupler_bb/decoupler_bb/test/example/: de_input_example.csv
building-blocks/core/example/decoupler_bb/: README.md  setup.py
building-blocks/core/src/carnival/: main.py
building-blocks/core/src/carnival_gex_preprocess/: main.py
building-blocks/core/src/carnivalpy/: README.md  main.py
building-blocks/core/src/cellnopt/: main.py
building-blocks/core/src/common/: __init__.py
building-blocks/core/src/export/: main.py
building-blocks/core/src/feature_merger/: Untitled Document  main.py
building-blocks/core/src/ml_jax_drug_prediction/: main.py
building-blocks/core/src/omnipath/: main.py
building-blocks/core/src/preprocessing/: main.py
building-blocks/core/src/progeny/: main.py
building-blocks/core/src/tfenrichment/: main.py
carnivalpy/: carnival.py
carnivalpy/examples/: lpsolve_carnivalR.R
carnivalpy/notebooks/: carnival-picos.ipynb  carnival-pymip.ipynb  model.lp
containers/: README.md  cell_features.csv  cell_list_example.txt  example.sh  genelist.txt  merge_example.ipynb  workflow.sh  workflow_bb.sh
containers/carnivalpy/: carnivalpy.sh  carnivalpy.singularity  export.R  feature_merge.py
containers/carnivalpy_lightweight/: build.sh
containers/codax-container/: README.md  build.sh  codax.sh  codax.singularity  codax_script.py  example_perturbations.txt  model.pkl  sim.pkl
containers/data/: cell_list_example.txt  genelist.txt  network.csv
containers/decoupler/: decoupler.singularity
containers/ml-jax/: README.md  ml-jax.singularity  ml.py
containers/parallel-solvers/: signaling-solvers.singularity
containers/r-base/: R-base.singularity
containers/saez-tools/: README.md  build.sh  saeztools.singularity
containers/tf-jax/: build.sh  ml.py  run.sh  tf-jax.singularity
containers/toolset/: README.md  build.sh  example.sh  toolset.singularity
experiments/codax_vs_cno/: CellNopt_CNORode_quickbench.ipynb  codax_logicODE_quickbench.ipynb  notebook.txt  plot.ipynb  toy_cno.R
experiments/code-carnival-parallel/: carnival-parallel-conditions.py  run.sh
experiments/results-bq-carnival/: README.md  convert_results.ipynb  data.tsv  model.R  plots.R  plots_multiscale.R  results.txt
notebooks/: jax_mf_v2.ipynb
scripts/: gdsc_basal_gex.R  gdsc_cells.csv
(+121 files in other folders)
