[metadata]
name = saezlab
version = 0.0.1
author = PerMedCoE Project
author_email = pablo.rodriguez-mier@uni-heidelberg.de
description = This package provides the a set of Building Blocks with the tools from Saez-Rodriguez's group (UKHD).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saezlab/permedcoe
project_urls =
    Bug Tracker = https://github.com/saezlab/permedcoe
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = permedcoe>=0.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    tfenrichment = tfenrichment.__main__:main
    preprocess = preprocessing.__main__:main
