[metadata]
name = saezlab
version = 0.0.1
author = PerMedCoE Project
author_email = pablo.rodriguez-mier@uni-heidelberg.de
description = This package provides the a set of Building Blocks with the tools from Saez-Rodriguez's group (UKHD).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saezlab/permedcoe
project_urls =
    Bug Tracker = https://github.com/saezlab/permedcoe
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = permedcoe>=0.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    tfenrichment_bb = tfenrichment.__main__:main
    preprocess_bb = preprocessing.__main__:main
    progeny_bb = progeny.__main__:main
    ml_jax_drug_prediction_bb = ml_jax_drug_prediction.__main__:main
    export_solver_hdf5_bb = export_solver_hdf5.__main__:main
    carnival_bb = carnival.__main__:main
    carnivalpy_bb = carnivalpy.__main__:main
    cellnopt_bb = cellnopt.__main__:main
    omnipath_bb = omnipath.__main__:main
    carnival_feature_merger_bb = carnival_feature_merger.__main__:main
